deploy/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: campo_gitlab_ci
   namespace: 
   labels:
     app: campo_gitlab_ci
spec:
  replicas: 1
  selector:
     matchLabels:
       app: campo_gitlab_ci
  template: 
    metadata:
      labels:
        app: campo_gitlab_ci
    spec:
      containers:
      - name: campo_gitlab_ci
        image: 
        ports:
        - containerPort: 80
        - containerPort: 5432
