deploy/03-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: campo_gitlab_ci-svc
  namespace:   
spec:
  selector:
    app: campo_gitlab_ci
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
