deploy/04-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: campo_gitlab_ci-ingress
  namespace:   
spec:
  tls:
  - hosts:
    - URL
    secretName: campo_gitlab_ci-ingress-secret
  rules:
  - host: URL
    http:
      paths:
      - backend:
          serviceName: campo_gitlab_ci-svc
          servicePort: 3000
